improved flattening logic

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -76,24 +76,24 @@
     "    return out\n",
     "\n",
     "def _dedup_columns(cols: List[str]) -> List[str]:\n",
-    "    \"\"\"Deduplicate column names and make them Spark-safe.\"\"\"\n",
+    "    \"\"\"Deduplicate and sanitize column names safely for Spark.\"\"\"\n",
     "    seen = {}\n",
     "    deduped = []\n",
-    "    for c in cols:\n",
-    "        base = c\n",
+    "    for orig in cols:\n",
+    "        # Spark-safe name normalization first\n",
+    "        c = (orig.replace(\".\", \"_\")\n",
+    "                 .replace(\"[\", \"_\")\n",
+    "                 .replace(\"]\", \"_\")\n",
+    "                 .replace(\" \", \"_\")\n",
+    "                 .replace(\":\", \"_\")\n",
+    "                 .replace(\"-\", \"_\"))\n",
+    "        # Deduplicate AFTER sanitization\n",
     "        if c in seen:\n",
     "            seen[c] += 1\n",
-    "            c = f\"{base}__{seen[base]}\"\n",
+    "            c = f\"{c}__{seen[c]}\"\n",
     "        else:\n",
     "            seen[c] = 0\n",
-    "        # Spark-safe column names\n",
-    "        safe = (c.replace(\".\", \"_\")\n",
-    "                  .replace(\"[\", \"_\")\n",
-    "                  .replace(\"]\", \"_\")\n",
-    "                  .replace(\" \", \"_\")\n",
-    "                  .replace(\":\", \"_\")\n",
-    "                  .replace(\"-\", \"_\"))\n",
-    "        deduped.append(safe)\n",
+    "        deduped.append(c)\n",
     "    return deduped\n",
     "\n",
     "def normalize_records(records: List[Dict[str, Any]]) -> pd.DataFrame:\n",
