got all the raw tables writing out for the assessment.

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -76,18 +76,19 @@
     "    return out\n",
     "\n",
     "def _dedup_columns(cols: List[str]) -> List[str]:\n",
-    "    \"\"\"Deduplicate and sanitize column names safely for Spark.\"\"\"\n",
+    "    \"\"\"Deduplicate and sanitize column names safely for Spark + Unity Catalog.\"\"\"\n",
     "    seen = {}\n",
     "    deduped = []\n",
     "    for orig in cols:\n",
-    "        # Spark-safe name normalization first\n",
-    "        c = (orig.replace(\".\", \"_\")\n",
+    "        # Normalize and sanitize first\n",
+    "        c = (orig.lower()\n",
+    "                 .replace(\".\", \"_\")\n",
     "                 .replace(\"[\", \"_\")\n",
     "                 .replace(\"]\", \"_\")\n",
     "                 .replace(\" \", \"_\")\n",
     "                 .replace(\":\", \"_\")\n",
     "                 .replace(\"-\", \"_\"))\n",
-    "        # Deduplicate AFTER sanitization\n",
+    "        # Deduplicate after lowercase normalization\n",
     "        if c in seen:\n",
     "            seen[c] += 1\n",
     "            c = f\"{c}__{seen[c]}\"\n",
