--- a/main.ipynb
+++ b/main.ipynb
@@ -250,7 +250,7 @@
     "        base_url = f\"https://{workspace_url}\"\n",
     "        headers = {\"Authorization\": f\"Bearer {token}\"}\n",
     "        \n",
-    "        uc_counts = enumerate_uc(\n",
+    "        uc_counts, uc_raw_data = enumerate_uc(\n",
     "            base_url=base_url,\n",
     "            headers=headers,\n",
     "            enable=UC_ENABLE,\n",
@@ -259,6 +259,17 @@
     "            schema_limit_per_catalog=UC_SCHEMA_LIMIT_PER_CATALOG,\n",
     "            max_workers=UC_MAX_WORKERS\n",
     "        )\n",
+    "        \n",
+    "        # Write UC schema and table raw data\n",
+    "        if uc_raw_data.get(\"schemas\"):\n",
+    "            raw_data[\"databricks_schema\"] = uc_raw_data[\"schemas\"]\n",
+    "            if ENABLE_STREAMING_WRITES:\n",
+    "                data_processor.write_single_raw_table(\"databricks_schema\", uc_raw_data[\"schemas\"])\n",
+    "        \n",
+    "        if uc_raw_data.get(\"tables\"):\n",
+    "            raw_data[\"databricks_table\"] = uc_raw_data[\"tables\"]\n",
+    "            if ENABLE_STREAMING_WRITES:\n",
+    "                data_processor.write_single_raw_table(\"databricks_table\", uc_raw_data[\"tables\"])\n",
     "        \n",
     "        # Step 3: Process and write data\n",
     "        if ENABLE_STREAMING_WRITES:\n",
@@ -298,7 +309,7 @@
     "    except Exception as e:\n",
     "        print(f\"[ERROR] Assessment failed: {e}\")\n",
     "        import traceback\n",
-    "        traceback.print_exc()\n"
+    "        traceback.print_exc()"
    ]
   },
   {
@@ -324,6 +335,22 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2110f7cf-54ec-40cc-8c87-d9eec04ec8fe",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
