--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -102,6 +102,26 @@
     "            log(f\"[UC-ERROR] {catalog}.{schema}: {e}\")\n",
     "        return 0, 0, 0\n",
     "    \n",
+    "    def list_tables_for_schema_with_data(self, catalog: str, schema: str) -> List[Dict[str, any]]:\n",
+    "        \"\"\"Return list of table metadata for catalog.schema\"\"\"\n",
+    "        try:\n",
+    "            r = requests.get(\n",
+    "                f\"{self.base_url}/api/2.1/unity-catalog/tables\",\n",
+    "                headers=self.headers,\n",
+    "                params={\"catalog_name\": catalog, \"schema_name\": schema},\n",
+    "                timeout=HTTP_TIMEOUT_SEC\n",
+    "            )\n",
+    "            if r.status_code == 200:\n",
+    "                tables = r.json().get(\"tables\", [])\n",
+    "                # Add catalog and schema context to each table\n",
+    "                for tbl in tables:\n",
+    "                    tbl[\"_catalog\"] = catalog\n",
+    "                    tbl[\"_schema\"] = schema\n",
+    "                return tables\n",
+    "        except Exception as e:\n",
+    "            log(f\"[UC-ERROR] {catalog}.{schema}: {e}\")\n",
+    "        return []\n",
+    "    \n",
     "    def get_catalogs(self, allowlist: List[str] = None, catalog_limit: int = 0) -> List[str]:\n",
     "        \"\"\"Get list of catalogs to scan.\"\"\"\n",
     "        try:\n",
@@ -155,16 +175,13 @@
     "        catalog_limit: int = 0,\n",
     "        schema_limit_per_catalog: int = 0,\n",
     "        max_workers: int = 20\n",
-    "    ) -> Dict[str, int]:\n",
+    "    ) -> Tuple[Dict[str, int], Dict[str, List[Dict[str, any]]]]:\n",
     "        \"\"\"\n",
     "        Enumerate Unity Catalog with configurable limits and threading.\n",
     "        \n",
-    "        Returns counts for:\n",
-    "        - uc_catalogs: number of catalogs scanned\n",
-    "        - uc_schemas: total number of schemas scanned  \n",
-    "        - uc_tables: total number of tables found\n",
-    "        - managed_tables: number of managed tables\n",
-    "        - external_tables: number of external tables\n",
+    "        Returns tuple of (counts, raw_data):\n",
+    "        - counts: dict with uc_catalogs, uc_schemas, uc_tables, managed_tables, external_tables\n",
+    "        - raw_data: dict with \"schemas\" and \"tables\" lists containing full metadata\n",
     "        \"\"\"\n",
     "        banner(\"3/4 Unity Catalog Enumeration\")\n",
     "        out = {\n",
@@ -175,9 +192,15 @@
     "            \"external_tables\": 0\n",
     "        }\n",
     "        \n",
+    "        # Collect actual data\n",
+    "        raw_data = {\n",
+    "            \"schemas\": [],\n",
+    "            \"tables\": []\n",
+    "        }\n",
+    "        \n",
     "        if not enable:\n",
     "            print(\"[UC] Skipped (UC_ENABLE=False).\")\n",
-    "            return out\n",
+    "            return out, raw_data\n",
     "\n",
     "        allowlist = allowlist or []\n",
     "        \n",
@@ -185,7 +208,7 @@
     "        catalogs = self.get_catalogs(allowlist, catalog_limit)\n",
     "        if not catalogs:\n",
     "            print(\"[UC] No catalogs found or accessible.\")\n",
-    "            return out\n",
+    "            return out, raw_data\n",
     "            \n",
     "        out[\"uc_catalogs\"] = len(catalogs)\n",
     "\n",
@@ -203,8 +226,15 @@
     "                total_schemas += len(schemas)\n",
     "                print(f\"[UC] {cat}: {len(schemas)} schemas (limit={schema_limit_per_catalog or 'ALL'})\")\n",
     "                \n",
+    "                # Capture schema data\n",
     "                for s in schemas:\n",
-    "                    futures.append(ex.submit(self.list_tables_for_schema, cat, s))\n",
+    "                    raw_data[\"schemas\"].append({\n",
+    "                        \"catalog_name\": cat,\n",
+    "                        \"schema_name\": s,\n",
+    "                        \"full_name\": f\"{cat}.{s}\"\n",
+    "                    })\n",
+    "                    # Queue table enumeration with full data\n",
+    "                    futures.append(ex.submit(self.list_tables_for_schema_with_data, cat, s))\n",
     "                    time.sleep(0.002)  # Small delay to avoid overwhelming the API\n",
     "                \n",
     "                queued_catalogs += 1\n",
@@ -213,10 +243,19 @@
     "\n",
     "            # Process results as they complete\n",
     "            for i, f in enumerate(as_completed(futures), 1):\n",
-    "                t, m, e = f.result()\n",
-    "                total_tables += t\n",
-    "                managed += m\n",
-    "                external += e\n",
+    "                table_data = f.result()\n",
+    "                \n",
+    "                if table_data:\n",
+    "                    # Collect table data\n",
+    "                    raw_data[\"tables\"].extend(table_data)\n",
+    "                    \n",
+    "                    # Count stats\n",
+    "                    for tbl in table_data:\n",
+    "                        total_tables += 1\n",
+    "                        if tbl.get(\"table_type\") == \"MANAGED\":\n",
+    "                            managed += 1\n",
+    "                        elif tbl.get(\"table_type\") == \"EXTERNAL\":\n",
+    "                            external += 1\n",
     "                \n",
     "                if i % 200 == 0:\n",
     "                    print(f\"[UC] Heartbeat: processed {i} schema-table batches (tables so far={total_tables})\")\n",
@@ -237,7 +276,8 @@
     "        desc = \", \".join(scope) if scope else \"full-scan\"\n",
     "        \n",
     "        print(f\"[UC] Done ({desc}) → {out['uc_catalogs']} catalogs, {out['uc_schemas']} schemas, {out['uc_tables']} tables\")\n",
-    "        return out\n"
+    "        print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, {len(raw_data['tables'])} table records\")\n",
+    "        return out, raw_data\n"
    ]
   },
   {
@@ -264,8 +304,14 @@
     "    catalog_limit: int = UC_CATALOG_LIMIT,\n",
     "    schema_limit_per_catalog: int = UC_SCHEMA_LIMIT_PER_CATALOG,\n",
     "    max_workers: int = UC_MAX_WORKERS\n",
-    ") -> Dict[str, int]:\n",
-    "    \"\"\"Backward compatibility wrapper for Unity Catalog enumeration.\"\"\"\n",
+    ") -> Tuple[Dict[str, int], Dict[str, List[Dict[str, any]]]]:\n",
+    "    \"\"\"\n",
+    "    Wrapper for Unity Catalog enumeration.\n",
+    "    \n",
+    "    Returns tuple of (counts, raw_data):\n",
+    "    - counts: dict with catalog/schema/table counts\n",
+    "    - raw_data: dict with \"schemas\" and \"tables\" lists containing full metadata\n",
+    "    \"\"\"\n",
     "    enumerator = UnityCatalogEnumerator(base_url, headers)\n",
     "    return enumerator.enumerate_unity_catalog(\n",
     "        enable=enable,\n",
