--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -97,6 +97,49 @@
     "        deduped.append(c)\n",
     "    return deduped\n",
     "\n",
+    "def _convert_complex_to_json(obj: Any, fields_to_preserve: List[str] = None) -> Any:\n",
+    "    \"\"\"Convert complex nested fields to JSON strings to avoid excessive flattening.\"\"\"\n",
+    "    import json\n",
+    "    \n",
+    "    if not isinstance(obj, dict):\n",
+    "        return obj\n",
+    "    \n",
+    "    # Default fields that should be kept as JSON strings\n",
+    "    if fields_to_preserve is None:\n",
+    "        fields_to_preserve = [\n",
+    "            'columns', 'properties', 'storage_descriptor', 'partition_keys',\n",
+    "            'view_definition', 'table_constraints', 'row_filter', 'column_mask',\n",
+    "            'data_source_format', 'table_properties', 'schema_properties',\n",
+    "            'catalog_properties', 'storage_location', 'encryption_details',\n",
+    "            'delta_runtime_properties_kvpairs', 'effective_predictive_optimization_flag',\n",
+    "            'pipelines', 'metastore_id'\n",
+    "        ]\n",
+    "    \n",
+    "    result = {}\n",
+    "    for key, value in obj.items():\n",
+    "        # Check if this field should be preserved as JSON\n",
+    "        if key in fields_to_preserve and isinstance(value, (dict, list)):\n",
+    "            # Convert to JSON string\n",
+    "            try:\n",
+    "                result[f\"{key}_json\"] = json.dumps(value)\n",
+    "            except:\n",
+    "                result[key] = str(value)\n",
+    "        else:\n",
+    "            result[key] = value\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "def _preprocess_uc_records(records: List[Dict[str, Any]], table_type: str) -> List[Dict[str, Any]]:\n",
+    "    \"\"\"Preprocess Unity Catalog records to prevent excessive column explosion.\"\"\"\n",
+    "    if table_type == 'databricks_table':\n",
+    "        # For UC tables, convert complex nested fields to JSON\n",
+    "        return [_convert_complex_to_json(r) for r in records]\n",
+    "    elif table_type == 'databricks_schema':\n",
+    "        # For UC schemas, keep simple structure (usually already simple)\n",
+    "        return [_convert_complex_to_json(r, ['properties', 'schema_properties']) for r in records]\n",
+    "    else:\n",
+    "        return records\n",
+    "\n",
     "def normalize_records(records: List[Dict[str, Any]]) -> pd.DataFrame:\n",
     "    \"\"\"Flatten JSON rows to a uniform pandas DataFrame with unique/safe columns.\"\"\"\n",
     "    if not records:\n",
@@ -106,11 +149,15 @@
     "    df.columns = _dedup_columns(list(df.columns))\n",
     "    return df\n",
     "\n",
-    "def to_spark_df(records: List[Dict[str, Any]], spark):\n",
+    "def to_spark_df(records: List[Dict[str, Any]], spark, table_type: str = None):\n",
     "    \"\"\"Use pandas→spark to avoid sparkContext usage on shared clusters.\"\"\"\n",
     "    if not records:\n",
     "        # Return a more explicit empty DataFrame with proper schema\n",
     "        return spark.createDataFrame([], \"struct<_empty:string>\")\n",
+    "    \n",
+    "    # Preprocess UC records if table_type is specified\n",
+    "    if table_type:\n",
+    "        records = _preprocess_uc_records(records, table_type)\n",
     "    \n",
     "    pdf = normalize_records(records)\n",
     "    if pdf.empty:\n",
@@ -188,8 +235,8 @@
     "                return\n",
     "    \n",
     "    try:\n",
-    "        # Create Spark DataFrame\n",
-    "        sdf = (to_spark_df(records, spark)\n",
+    "        # Create Spark DataFrame (with preprocessing for UC tables/schemas)\n",
+    "        sdf = (to_spark_df(records, spark, table_type=key)\n",
     "               .withColumn(\"_collected_at\", F.lit(start_ts))\n",
     "               .withColumn(\"_workspace\", F.lit(workspace_url)))\n",
     "        \n",
