--- a/main.ipynb
+++ b/main.ipynb
@@ -341,7 +341,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2110f7cf-54ec-40cc-8c87-d9eec04ec8fe",
      "showTitle": false,
