updated config settings.

--- a/config.ipynb
+++ b/config.ipynb
@@ -55,8 +55,8 @@
     "# TARGET CONFIGURATION\n",
     "# ====================================================================================\n",
     "# ---- Where to write results ----\n",
-    "TARGET_CATALOG = \"boeingeastus\"            # <- set your catalog\n",
-    "TARGET_SCHEMA  = \"workspace_scan\"  # <- set your schema (created if missing)\n",
+    "TARGET_CATALOG = \"users\"            # <- set your catalog\n",
+    "TARGET_SCHEMA  = \"robert_altmiller\"  # <- set your schema (created if missing)\n",
     "WRITE_RAW_MODE = \"overwrite\"       # \"append\" or \"overwrite\"\n",
     "WRITE_SUMMARY_MODE = \"overwrite\"   # \"append\" or \"overwrite\""
    ]
@@ -182,8 +182,8 @@
     "# ====================================================================================\n",
     "# ---- UC scan controls (fast unit tests) ----\n",
     "UC_ENABLE = True\n",
-    "UC_CATALOG_ALLOWLIST: List[str] = []   # e.g. [\"main\", \"hive_metastore\"]; empty = all\n",
-    "UC_CATALOG_LIMIT = 0                   # 0 = all; N = first N catalogs\n",
+    "UC_CATALOG_ALLOWLIST: List[str] = []  # e.g. [\"main\", \"hive_metastore\"]; empty = all\n",
+    "UC_CATALOG_LIMIT = 0                  # 0 = all; N = first N catalogs\n",
     "UC_SCHEMA_LIMIT_PER_CATALOG = 0       # 0 = all; N = first N schemas per catalog\n",
     "UC_MAX_WORKERS = 20"
    ]
@@ -225,33 +225,33 @@
     "    \"databricks_global_init_script\": None,  # No pagination available\n",
     "    \n",
     "    # --- Jobs / Pipelines / Alerts / Dashboards ---\n",
-    "    \"databricks_job\": True,                 # Enable pagination (can be many jobs)\n",
+    "    \"databricks_job\": False,                # Enable pagination (can be many jobs)\n",
     "    \"databricks_pipeline\": None,            # No pagination available\n",
-    "    \"databricks_alert\": True,               # Enable pagination (can be many alerts)\n",
+    "    \"databricks_alert\": False,              # Enable pagination (can be many alerts)\n",
     "    \"databricks_dashboard\": False,          # Disable for faster collection (first page usually sufficient)\n",
     "    \n",
     "    # --- MLflow / Serving ---\n",
-    "    \"databricks_registered_model\": True,    # Enable pagination (can be many models)\n",
+    "    \"databricks_registered_model\": False,   # Enable pagination (can be many models)\n",
     "    \"databricks_experiment\": True,          # Enable pagination (can be many experiments)\n",
     "    \"databricks_model_serving\": True,       # Enable pagination (can be many endpoints)\n",
     "    \n",
     "    # --- DBSQL ---\n",
     "    \"databricks_sql_endpoint\": True,        # Enable pagination (can be many warehouses)\n",
     "    \"databricks_sql_dashboard\": False,      # Disable for faster collection (alias to databricks_dashboard)\n",
-    "    \"databricks_sql_alerts\": True,          # Enable pagination (alias to databricks_alert)\n",
+    "    \"databricks_sql_alerts\": False,         # Enable pagination (alias to databricks_alert)\n",
     "    \n",
     "    # --- UC / Metastore ---\n",
     "    \"databricks_catalog\": None,             # No pagination available (usually small list)\n",
-    "    \"databricks_external_location\": True,   # Enable pagination (can be many locations)\n",
-    "    \"databricks_storage_credential\": True,  # Enable pagination (can be many credentials)\n",
-    "    \"databricks_share\": True,               # Enable pagination (can be many shares)\n",
-    "    \"databricks_recipient\": True,           # Enable pagination (can be many recipients)\n",
+    "    \"databricks_external_location\": False,  # Enable pagination (can be many locations)\n",
+    "    \"databricks_storage_credential\": False,  # Enable pagination (can be many credentials)\n",
+    "    \"databricks_share\": False,               # Enable pagination (can be many shares)\n",
+    "    \"databricks_recipient\": False,           # Enable pagination (can be many recipients)\n",
     "    \n",
     "    # --- Repos / Identity / Connections ---\n",
     "    \"databricks_repo\": True,                # Enable pagination (can be many repos)\n",
     "    \"databricks_secret_scope\": None,        # No pagination available\n",
     "    \"databricks_group\": True,               # Enable pagination (can be many groups)\n",
-    "    \"databricks_connection\": True,          # Enable pagination (can be many connections)\n",
+    "    \"databricks_connection\": False,         # Enable pagination (can be many connections)\n",
     "    \"databricks_credential\": None,          # No pagination available\n",
     "    \n",
     "    # --- Vector Search ---\n",
@@ -269,7 +269,7 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
-    "pythonIndentUnit": 4
+    "pythonIndentUnit": 2
    },
    "notebookName": "config",
    "widgets": {}
