--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -36,6 +36,7 @@
    },
    "outputs": [],
    "source": [
+    "import re\n",
     "import pandas as pd\n",
     "from typing import Dict, Any, List\n",
     "from datetime import datetime, timezone\n",
@@ -76,19 +77,33 @@
     "    return out\n",
     "\n",
     "def _dedup_columns(cols: List[str]) -> List[str]:\n",
-    "    \"\"\"Deduplicate and sanitize column names safely for Spark + Unity Catalog.\"\"\"\n",
+    "    \"\"\"Deduplicate and sanitize column names safely for Spark + Unity Catalog + Delta.\"\"\"\n",
     "    seen = {}\n",
     "    deduped = []\n",
     "    for orig in cols:\n",
-    "        # Normalize and sanitize first\n",
-    "        c = (orig.lower()\n",
-    "                 .replace(\".\", \"_\")\n",
-    "                 .replace(\"[\", \"_\")\n",
-    "                 .replace(\"]\", \"_\")\n",
-    "                 .replace(\" \", \"_\")\n",
-    "                 .replace(\":\", \"_\")\n",
-    "                 .replace(\"-\", \"_\"))\n",
-    "        # Deduplicate after lowercase normalization\n",
+    "        # Normalize case\n",
+    "        c = orig.lower()\n",
+    "        # Replace invalid or risky characters with underscores\n",
+    "        c = (c.replace(\".\", \"_\")\n",
+    "               .replace(\"[\", \"_\")\n",
+    "               .replace(\"]\", \"_\")\n",
+    "               .replace(\" \", \"_\")\n",
+    "               .replace(\":\", \"_\")\n",
+    "               .replace(\"-\", \"_\")\n",
+    "               .replace(\"=\", \"_\")\n",
+    "               .replace(\"{\", \"_\")\n",
+    "               .replace(\"}\", \"_\")\n",
+    "               .replace(\"(\", \"_\")\n",
+    "               .replace(\")\", \"_\")\n",
+    "               .replace(\";\", \"_\")\n",
+    "               .replace(\",\", \"_\")\n",
+    "               .replace(\"\\\"\", \"_\")\n",
+    "               .replace(\"'\", \"_\")\n",
+    "               .replace(\"\\n\", \"_\")\n",
+    "               .replace(\"\\t\", \"_\"))\n",
+    "        # Collapse duplicate underscores and trim\n",
+    "        c = re.sub(r\"_+\", \"_\", c).strip(\"_\")\n",
+    "        # Deduplicate after normalization\n",
     "        if c in seen:\n",
     "            seen[c] += 1\n",
     "            c = f\"{c}__{seen[c]}\"\n",
