feat: add batch writing support for large datasets
- Add WRITE_BATCH_SIZE and WRITE_BATCH_THRESHOLD config parameters
- Implement automatic batch writing for datasets > 5000 records
- Write large datasets in 1000-row batches to avoid Spark Connect protobuf size limits
- Add automatic fallback from single-write to batch mode on protobuf errors
- Fixes raw_databricks_table write failures with 8792+ records
- First batch uses configured write mode, subsequent batches append
- Progress tracking shows [BATCH N/M] for visibility

--- a/config.ipynb
+++ b/config.ipynb
@@ -133,7 +133,11 @@
     "# DATA PROCESSING CONFIGURATION\n",
     "# ====================================================================================\n",
     "# Enable streaming writes - write raw data immediately after each API call\n",
-    "ENABLE_STREAMING_WRITES = True  # True = immediate writes, False = batch writes at end"
+    "ENABLE_STREAMING_WRITES = True  # True = immediate writes, False = batch writes at end\n",
+    "\n",
+    "# Batch writing for large datasets (helps avoid Spark Connect protobuf size limits)\n",
+    "WRITE_BATCH_SIZE = 1000           # Write in batches of N rows for large datasets\n",
+    "WRITE_BATCH_THRESHOLD = 5000      # Use batch writing when records > this threshold"
    ]
   },
   {
