--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -227,7 +227,7 @@
     "    start_ts: str,\n",
     "    spark\n",
     "):\n",
-    "    \"\"\"Write a single raw data table to Unity Catalog with robust schema handling.\"\"\"\n",
+    "    \"\"\"Write a single raw data table to Unity Catalog with robust schema handling and batch writing support.\"\"\"\n",
     "    tbl = f\"`{catalog}`.`{schema}`.`raw_{key}`\"\n",
     "    \n",
     "    # Check for empty datasets\n",
@@ -249,6 +249,54 @@
     "                print(f\"[WRITE-FAIL] raw_{key}: Failed to create empty table: {e}\")\n",
     "                return\n",
     "    \n",
+    "    # Check if we need batch writing (for very large datasets to avoid protobuf size limits)\n",
+    "    total_records = len(records)\n",
+    "    use_batch_writing = total_records > WRITE_BATCH_THRESHOLD\n",
+    "    \n",
+    "    if use_batch_writing:\n",
+    "        print(f\"[BATCH-WRITE] raw_{key}: Writing {total_records} rows in batches of {WRITE_BATCH_SIZE}...\")\n",
+    "        \n",
+    "        # Write in batches\n",
+    "        num_batches = (total_records + WRITE_BATCH_SIZE - 1) // WRITE_BATCH_SIZE\n",
+    "        for batch_idx in range(num_batches):\n",
+    "            start_idx = batch_idx * WRITE_BATCH_SIZE\n",
+    "            end_idx = min(start_idx + WRITE_BATCH_SIZE, total_records)\n",
+    "            batch_records = records[start_idx:end_idx]\n",
+    "            \n",
+    "            try:\n",
+    "                # Create Spark DataFrame for this batch\n",
+    "                sdf = (to_spark_df(batch_records, spark, table_type=key)\n",
+    "                       .withColumn(\"_collected_at\", F.lit(start_ts))\n",
+    "                       .withColumn(\"_workspace\", F.lit(workspace_url)))\n",
+    "                \n",
+    "                # First batch: use configured write mode, subsequent batches: append\n",
+    "                write_mode = WRITE_RAW_MODE if batch_idx == 0 else \"append\"\n",
+    "                writer = sdf.write.mode(write_mode)\n",
+    "                \n",
+    "                # Add Delta Lake schema evolution options\n",
+    "                if ENABLE_MERGE_SCHEMA or batch_idx > 0:  # Always merge schema after first batch\n",
+    "                    writer = writer.option(\"mergeSchema\", \"true\")\n",
+    "                \n",
+    "                if ENABLE_OVERWRITE_SCHEMA and batch_idx == 0:\n",
+    "                    writer = writer.option(\"overwriteSchema\", \"true\")\n",
+    "                \n",
+    "                writer.saveAsTable(tbl)\n",
+    "                print(f\"[BATCH {batch_idx+1}/{num_batches}] raw_{key} → {tbl} ({len(batch_records)} rows)\")\n",
+    "                \n",
+    "            except Exception as e:\n",
+    "                print(f\"[WRITE-FAIL] raw_{key} (batch {batch_idx+1}/{num_batches}): {e}\")\n",
+    "                if VERBOSE_SCHEMA_ERRORS:\n",
+    "                    import traceback\n",
+    "                    print(f\"[ERROR-DETAIL] raw_{key} (batch {batch_idx+1}):\")\n",
+    "                    print(\"  \" + \"\\n  \".join(traceback.format_exc().split(\"\\n\")[-10:]))\n",
+    "                # If first batch fails, stop; otherwise continue with remaining batches\n",
+    "                if batch_idx == 0:\n",
+    "                    return\n",
+    "        \n",
+    "        print(f\"[WRITE-COMPLETE] raw_{key} → {tbl} ({total_records} rows total)\")\n",
+    "        return\n",
+    "    \n",
+    "    # Standard single-write path (for smaller datasets)\n",
     "    try:\n",
     "        # Create Spark DataFrame (with preprocessing for UC tables/schemas)\n",
     "        sdf = (to_spark_df(records, spark, table_type=key)\n",
@@ -273,6 +321,16 @@
     "            \n",
     "        except Exception as e1:\n",
     "            error_msg = str(e1).lower()\n",
+    "            \n",
+    "            # Check if this is a protobuf size error - if so, retry with batch writing\n",
+    "            if \"protobuf\" in error_msg or \"negative size\" in error_msg:\n",
+    "                print(f\"[PROTOBUF-ERROR] raw_{key}: Message too large, retrying with batch writing...\")\n",
+    "                # Recursively call with smaller threshold to force batching\n",
+    "                original_threshold = WRITE_BATCH_THRESHOLD\n",
+    "                globals()['WRITE_BATCH_THRESHOLD'] = 100  # Force batching\n",
+    "                write_single_raw_table(key, records, catalog, schema, workspace_url, start_ts, spark)\n",
+    "                globals()['WRITE_BATCH_THRESHOLD'] = original_threshold  # Restore\n",
+    "                return\n",
     "            \n",
     "            # Handle specific schema mismatch errors\n",
     "            if any(phrase in error_msg for phrase in [\n",
