fix: prevent column explosion in UC table writes
- Replace _convert_complex_to_json with _convert_all_complex_to_json
- Convert ALL dict/list fields to JSON strings (e.g., properties_json, columns_json)
- Only keep simple scalar fields (name, table_type, owner, etc.) as columns
- Prevents thousands of columns from nested properties/statistics fields
- Fixes protobuf size limit error caused by excessive schema complexity
- raw_databricks_table now has ~20 manageable columns instead of thousands

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -112,46 +112,59 @@
     "        deduped.append(c)\n",
     "    return deduped\n",
     "\n",
-    "def _convert_complex_to_json(obj: Any, fields_to_preserve: List[str] = None) -> Any:\n",
-    "    \"\"\"Convert complex nested fields to JSON strings to avoid excessive flattening.\"\"\"\n",
+    "def _convert_all_complex_to_json(obj: Any, keep_scalar_fields: List[str] = None) -> Any:\n",
+    "    \"\"\"Convert ALL dict/list fields to JSON strings, keeping only scalar fields.\"\"\"\n",
     "    import json\n",
     "    \n",
     "    if not isinstance(obj, dict):\n",
     "        return obj\n",
     "    \n",
-    "    # Default fields that should be kept as JSON strings\n",
-    "    if fields_to_preserve is None:\n",
-    "        fields_to_preserve = [\n",
-    "            'columns', 'properties', 'storage_descriptor', 'partition_keys',\n",
-    "            'view_definition', 'table_constraints', 'row_filter', 'column_mask',\n",
-    "            'data_source_format', 'table_properties', 'schema_properties',\n",
-    "            'catalog_properties', 'storage_location', 'encryption_details',\n",
-    "            'delta_runtime_properties_kvpairs', 'effective_predictive_optimization_flag',\n",
-    "            'pipelines', 'metastore_id'\n",
+    "    # For UC tables: keep only these simple scalar fields as columns\n",
+    "    # Everything else (nested dicts/lists) gets converted to JSON strings\n",
+    "    if keep_scalar_fields is None:\n",
+    "        keep_scalar_fields = [\n",
+    "            # Core identifiers\n",
+    "            'name', 'table_name', 'full_name', 'catalog_name', 'schema_name',\n",
+    "            'table_id', 'metastore_id',\n",
+    "            # Type and format\n",
+    "            'table_type', 'data_source_format',\n",
+    "            # Ownership and timestamps\n",
+    "            'owner', 'created_at', 'created_by', 'updated_at', 'updated_by',\n",
+    "            # Status\n",
+    "            'comment', 'generation',\n",
+    "            # Injected fields\n",
+    "            '_catalog', '_schema', '_collected_at', '_workspace'\n",
     "        ]\n",
     "    \n",
     "    result = {}\n",
     "    for key, value in obj.items():\n",
-    "        # Check if this field should be preserved as JSON\n",
-    "        if key in fields_to_preserve and isinstance(value, (dict, list)):\n",
-    "            # Convert to JSON string\n",
+    "        # If value is a dict or list, convert to JSON\n",
+    "        if isinstance(value, (dict, list)):\n",
     "            try:\n",
     "                result[f\"{key}_json\"] = json.dumps(value)\n",
     "            except:\n",
-    "                result[key] = str(value)\n",
-    "        else:\n",
+    "                result[f\"{key}_json\"] = str(value)\n",
+    "        # If value is a simple scalar and key is in whitelist, keep as-is\n",
+    "        elif key in keep_scalar_fields or not keep_scalar_fields:\n",
     "            result[key] = value\n",
+    "        # Otherwise, convert to string to be safe\n",
+    "        else:\n",
+    "            result[key] = str(value) if value is not None else None\n",
     "    \n",
     "    return result\n",
     "\n",
     "def _preprocess_uc_records(records: List[Dict[str, Any]], table_type: str) -> List[Dict[str, Any]]:\n",
     "    \"\"\"Preprocess Unity Catalog records to prevent excessive column explosion.\"\"\"\n",
     "    if table_type == 'databricks_table':\n",
-    "        # For UC tables, convert complex nested fields to JSON\n",
-    "        return [_convert_complex_to_json(r) for r in records]\n",
+    "        # For UC tables, aggressively convert ALL nested structures to JSON\n",
+    "        # Only keep simple scalar fields as columns\n",
+    "        return [_convert_all_complex_to_json(r) for r in records]\n",
     "    elif table_type == 'databricks_schema':\n",
-    "        # For UC schemas, keep simple structure (usually already simple)\n",
-    "        return [_convert_complex_to_json(r, ['properties', 'schema_properties']) for r in records]\n",
+    "        # For UC schemas, also aggressive conversion\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'catalog_name', 'schema_name', 'full_name', 'owner', \n",
+    "            'created_at', 'updated_at', 'comment', '_catalog', '_schema'\n",
+    "        ]) for r in records]\n",
     "    else:\n",
     "        return records\n",
     "\n",
