feat: add support for legacy hive_metastore in UC enumeration
- Modify get_catalogs() to include hive_metastore when specified in allowlist
- hive_metastore is not returned by /api/2.1/unity-catalog/catalogs API
- Special handling ensures it's added if in UC_CATALOG_ALLOWLIST
- Same Unity Catalog APIs work for hive_metastore schemas/tables
- Enables scanning: UC_CATALOG_ALLOWLIST = ['hive_metastore', 'main']

--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -131,6 +131,12 @@
     "            catalogs = [c[\"name\"] for c in rr.json().get(\"catalogs\", [])]\n",
     "            \n",
     "            if allowlist:\n",
+    "                # Special case: if hive_metastore is in allowlist, always include it\n",
+    "                # (it's not returned by catalogs API but exists in legacy metastore)\n",
+    "                if \"hive_metastore\" in allowlist and \"hive_metastore\" not in catalogs:\n",
+    "                    catalogs.append(\"hive_metastore\")\n",
+    "                    log(\"[UC] Added legacy hive_metastore to catalog list\")\n",
+    "                \n",
     "                catset = set(catalogs)\n",
     "                catalogs = [c for c in allowlist if c in catset]\n",
     "            \n",
