--- a/config.ipynb
+++ b/config.ipynb
@@ -23,7 +23,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a30cb2cb-3fb7-4ee8-90fe-0697f8c79905",
      "showTitle": true,
@@ -41,7 +44,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b52469d5-f653-4122-bfd8-b6e2170c493d",
      "showTitle": true,
@@ -66,7 +72,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "47ed02ff-833a-4ee7-b827-8b932c1f4227",
      "showTitle": true,
@@ -96,7 +105,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7eaec820-d531-44bb-8b5d-183d4e679142",
      "showTitle": true,
@@ -119,7 +131,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "13426242-1ddf-4958-90e3-c95e56a4e6ec",
      "showTitle": true,
@@ -141,7 +156,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "81517343-5735-4f67-85dd-1308e84b9615",
      "showTitle": true,
@@ -167,7 +185,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0def2fa3-1da7-49a3-901a-38d0b79c4015",
      "showTitle": true,
@@ -182,7 +203,7 @@
     "# ====================================================================================\n",
     "# ---- UC scan controls (fast unit tests) ----\n",
     "UC_ENABLE = True\n",
-    "UC_CATALOG_ALLOWLIST: List[str] = []  # e.g. [\"main\", \"hive_metastore\"]; empty = all\n",
+    "UC_CATALOG_ALLOWLIST: List[str] = [\"hive_metastore\"]  # e.g. [\"main\", \"hive_metastore\"]; empty = all\n",
     "UC_CATALOG_LIMIT = 0                  # 0 = all; N = first N catalogs\n",
     "UC_SCHEMA_LIMIT_PER_CATALOG = 0       # 0 = all; N = first N schemas per catalog\n",
     "UC_MAX_WORKERS = 20"
@@ -193,7 +214,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9129b11f-34b2-44d6-af99-daeab1e540fb",
      "showTitle": true,
@@ -225,13 +249,13 @@
     "    \"databricks_global_init_script\": None,  # No pagination available\n",
     "    \n",
     "    # --- Jobs / Pipelines / Alerts / Dashboards ---\n",
-    "    \"databricks_job\": False,                # Enable pagination (can be many jobs)\n",
+    "    \"databricks_job\": True,                # Enable pagination (can be many jobs)\n",
     "    \"databricks_pipeline\": None,            # No pagination available\n",
     "    \"databricks_alert\": False,              # Enable pagination (can be many alerts)\n",
     "    \"databricks_dashboard\": False,          # Disable for faster collection (first page usually sufficient)\n",
     "    \n",
     "    # --- MLflow / Serving ---\n",
-    "    \"databricks_registered_model\": False,   # Enable pagination (can be many models)\n",
+    "    \"databricks_registered_model\": True,   # Enable pagination (can be many models)\n",
     "    \"databricks_experiment\": True,          # Enable pagination (can be many experiments)\n",
     "    \"databricks_model_serving\": True,       # Enable pagination (can be many endpoints)\n",
     "    \n",
@@ -242,16 +266,16 @@
     "    \n",
     "    # --- UC / Metastore ---\n",
     "    \"databricks_catalog\": None,             # No pagination available (usually small list)\n",
-    "    \"databricks_external_location\": False,  # Enable pagination (can be many locations)\n",
-    "    \"databricks_storage_credential\": False,  # Enable pagination (can be many credentials)\n",
-    "    \"databricks_share\": False,               # Enable pagination (can be many shares)\n",
-    "    \"databricks_recipient\": False,           # Enable pagination (can be many recipients)\n",
+    "    \"databricks_external_location\": True,  # Enable pagination (can be many locations)\n",
+    "    \"databricks_storage_credential\": True,  # Enable pagination (can be many credentials)\n",
+    "    \"databricks_share\": True,               # Enable pagination (can be many shares)\n",
+    "    \"databricks_recipient\": True,           # Enable pagination (can be many recipients)\n",
     "    \n",
     "    # --- Repos / Identity / Connections ---\n",
     "    \"databricks_repo\": True,                # Enable pagination (can be many repos)\n",
     "    \"databricks_secret_scope\": None,        # No pagination available\n",
     "    \"databricks_group\": True,               # Enable pagination (can be many groups)\n",
-    "    \"databricks_connection\": False,         # Enable pagination (can be many connections)\n",
+    "    \"databricks_connection\": True,         # Enable pagination (can be many connections)\n",
     "    \"databricks_credential\": None,          # No pagination available\n",
     "    \n",
     "    # --- Vector Search ---\n",
@@ -263,7 +287,13 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": null,
    "inputWidgetPreferences": null,
