--- a/main.ipynb
+++ b/main.ipynb
@@ -309,31 +309,11 @@
     "    except Exception as e:\n",
     "        print(f\"[ERROR] Assessment failed: {e}\")\n",
     "        import traceback\n",
-    "        traceback.print_exc()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ee198b7e-9124-4ea3-82ee-3468835f69e9",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "        traceback.print_exc()\n",
+    "\n",
+    "\n",
     "# Run the main assessment\n",
-    "# This cell allows the notebook to be run directly in a Databricks environment\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "main()"
    ]
   }
  ],
