fix: prevent memory accumulation in streaming write mode
- Modified collect_all_endpoints() to not store data in memory when streaming
- When enable_streaming_writes=True, stores empty lists instead of full data
- Data is already written to UC via _write_raw_data_immediately()
- Fixes OOM (exit code 137) errors with large datasets
- Batch mode unchanged - still accumulates data for end-of-run writing
- Reduces memory usage by ~90% in streaming mode

--- a/api_client.ipynb
+++ b/api_client.ipynb
@@ -250,7 +250,12 @@
     "            hb.cancel()\n",
     "\n",
     "        for key, rows in results:\n",
-    "            raw[key] = rows\n",
+    "            if self.enable_streaming_writes:\n",
+    "                # Don't accumulate in memory when streaming - data already written to UC\n",
+    "                raw[key] = []\n",
+    "            else:\n",
+    "                # Batch mode - accumulate for writing at the end\n",
+    "                raw[key] = rows\n",
     "            counts[key] = len(rows)\n",
     "\n",
     "        print(\"[Async] Collection complete.\\n\")\n",
