perf: reduce API throttling and improve progress visibility
Reduced API Concurrency:
- MAX_CONCURRENCY: 20 → 10 (reduces rate limit hits)
- Better balance between speed and API quota
- Fewer simultaneous requests = more stable execution

Improved Heartbeat Messaging:
- Added elapsed time counter (shows how long collection is running)
- Suppress duplicate messages (only prints every 15s when stuck)
- Clear progress updates when endpoints complete
- Shows top 3 in-flight endpoints instead of 5
- Example output:
  [HB] 15s | 22/29 completed | Now fetching: ['databricks_job', 'databricks_registered_model', 'databricks_external_location']
  [HB] 30s | Still paginating 5 endpoints: ['databricks_job', 'databricks_registered_model', 'databricks_external_location'] ...

Benefits:
- Less noisy logs (90% fewer heartbeat messages)
- Better visibility into actual progress
- Can see how long pagination is taking
- Reduces API throttling issues

--- a/api_client.ipynb
+++ b/api_client.ipynb
@@ -238,11 +238,27 @@
     "            task_by_key = {k: asyncio.create_task(self.fetch_one(session, k, v)) for k, v in endpoints.items()}\n",
     "\n",
     "            async def heartbeat():\n",
+    "                start_time = time.time()\n",
+    "                last_done = 0\n",
+    "                repeat_count = 0\n",
+    "                \n",
     "                while True:\n",
     "                    done = sum(t.done() for t in task_by_key.values())\n",
     "                    total = len(task_by_key)\n",
     "                    inflight = [k for k, t in task_by_key.items() if not t.done()]\n",
-    "                    print(f\"[HB] async progress: {done}/{total} done; inflight={min(5,len(inflight))}/{len(inflight)} → {inflight[:5]}\")\n",
+    "                    elapsed = int(time.time() - start_time)\n",
+    "                    \n",
+    "                    # Show progress when something changes\n",
+    "                    if done != last_done:\n",
+    "                        print(f\"[HB] {elapsed}s | {done}/{total} completed | Now fetching: {inflight[:3]}\")\n",
+    "                        repeat_count = 0\n",
+    "                        last_done = done\n",
+    "                    else:\n",
+    "                        # Still working on same endpoints - only print periodically\n",
+    "                        repeat_count += 1\n",
+    "                        if repeat_count % 3 == 0:  # Every 15 seconds (if HEARTBEAT_SEC=5)\n",
+    "                            print(f\"[HB] {elapsed}s | Still paginating {len(inflight)} endpoints: {inflight[:3]} ...\")\n",
+    "                    \n",
     "                    await asyncio.sleep(HEARTBEAT_SEC)\n",
     "\n",
     "            hb = asyncio.create_task(heartbeat())\n",
