--- a/config.ipynb
+++ b/config.ipynb
@@ -89,7 +89,7 @@
     "# HTTP & CONCURRENCY CONFIGURATION\n",
     "# ====================================================================================\n",
     "# ---- Async / concurrency ----\n",
-    "MAX_CONCURRENCY = 20               # aiohttp concurrent in-flight requests\n",
+    "MAX_CONCURRENCY = 10               # aiohttp concurrent in-flight requests (reduced to avoid throttling)\n",
     "HTTP_TIMEOUT_SEC = 60\n",
     "RETRY_DELAY_BASE = 2\n",
     "RETRY_ATTEMPTS = 3\n",
